--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,9 @@
-PORT=3000
+PORT=3400
+
+DB_HOST=localhost
+DB_PORT=5433
+DB_USER=testUser
+DB_PASSWORD=123456
+DB_NAME=restaurantReviewDB
+
+JWT_SECRET=here goes your jwt secret
