--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,7 @@ DB_PASSWORD=123456
 DB_NAME=restaurantReviewDB
 
 JWT_SECRET=here goes your jwt secret
+
+APP_EMAIL=your email
+GOOGLE_APP_PASSWORD=your google app password
+APP_HOST=http://localhost
